changed to legacy

--- a/water_ripple_effect/maidentribute/index.html
+++ b/water_ripple_effect/maidentribute/index.html
@@ -15,7 +15,7 @@
           height: window.innerHeight
         });
         document.body.appendChild(app.view);
-        var image = new PIXI.Sprite.from('ironmaiden-collage.jpg');
+        var image = new PIXI.Sprite.from('legacyofthebeast.jpg');
         image.width = window.innerWidth;
         image.height = window.innerHeight;
         app.stage.addChild(image);
